# aoc23

./: .gitignore  pyproject.toml
src/aoc/: day_01_1.py  day_01_2.py  day_02_1.py  day_02_2.py  day_03_1.py  day_03_2.py  day_04_1.py  day_04_2.py  day_05_1.py  day_05_2.py  day_06_1.py  day_06_2.py  day_07_1.py  day_07_2.py  day_08_1.py  day_08_2.py
